--- a/index.html
+++ b/index.html
@@ -5,14 +5,8 @@
   <title>Köppen-Geiger Globe</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Mapbox Core -->
   <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
   <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet" />
-
-  <!-- LOCAL Geocoder (GitHub Pages safe) -->
-  <link href="./mapbox-geocoder.css" rel="stylesheet" />
-  <script src="./mapbox-geocoder.js"></script>
-
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700;900&display=swap" rel="stylesheet">
 
   <style>
@@ -22,6 +16,7 @@
     #opacityControls,
     #legendContainer,
     input[type=range],
+    .mapboxgl-ctrl,
     .mapboxgl-popup-content {
       font-family: 'Ubuntu', sans-serif !important;
     }
@@ -31,7 +26,7 @@
 
     #controlWrapper {
       position: absolute;
-      top: 70px; /* geocoder occupies top-left */
+      top: 10px;
       left: 10px;
       background: white;
       padding: 8px 12px;
@@ -92,16 +87,42 @@
         0.21px -0.21px 0 rgba(0,0,0,0.85),
        -0.21px -0.21px 0 rgba(0,0,0,0.85);
     }
+
+    /* added for search box */
+    #searchBox {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      background: white;
+      padding: 6px 10px;
+      border-radius: 6px;
+      box-shadow: 0 0 6px rgba(0,0,0,0.15);
+      z-index: 2000;
+      width: 200px;
+    }
+
+    #searchInput {
+      width: 100%;
+      border: none;
+      outline: none;
+      font-size: 14px;
+      font-family: Ubuntu, sans-serif;
+    }
+
   </style>
 </head>
-
 <body>
   <div id="map"></div>
+
+  <!-- search box -->
+  <div id="searchBox">
+    <input id="searchInput" placeholder="Search place…">
+  </div>
 
   <div id="controlWrapper">
     <button id="toggleOpacity" class="toggle-button">Show Climate Zones</button>
     <div id="opacityControls">
-      <input type="range" id="opacitySlider" min="0" max="1" step="0.05" value="1" />
+      <input type="range" id="opacitySlider" min="0" max="1" step="0.05" value="0.5" />
     </div>
 
     <button id="toggleLegend" class="toggle-button">Show Legend</button>
@@ -111,7 +132,6 @@
   </div>
 
   <script>
-    /* Colour helpers */
     function hexToRgb(hex) {
       if (!hex) return null;
       let c = hex.trim();
@@ -126,12 +146,11 @@
       const rgb = hexToRgb(hex);
       if (!rgb) return 0.5;
       const { r, g, b } = rgb;
-      return ((r * 299) + (g * 587) + (b * 114)) / 255000;
+      return ((r * 299) + (g * 587) + (b * 114)) / (255000);
     }
 
     const BRIGHTNESS_THRESHOLD = 0.75;
 
-    /* GDPR Circle */
     function createGeoJSONCircle(center, radiusKm, points = 64) {
       const lat = center[1], lon = center[0];
       const coords = [];
@@ -146,7 +165,6 @@
     }
 
     mapboxgl.accessToken = 'pk.eyJ1IjoiYXJjaHdydGgiLCJhIjoiY21hZHZpb3Y0MDB3czJxcjZxNjMyNjV5ayJ9.Z5pVSBUcI3HDeALtF6YIiA';
-
     const map = new mapboxgl.Map({
       container: 'map',
       style: 'mapbox://styles/mapbox/satellite-v9',
@@ -157,53 +175,69 @@
 
     map.on('style.load', () => map.setFog({}));
 
+    // SEARCH FUNCTION (Mapbox REST API)
+    async function searchPlace(query) {
+      const url = "https://api.mapbox.com/geocoding/v5/mapbox.places/" +
+        encodeURIComponent(query) +
+        ".json?access_token=" + mapboxgl.accessToken;
+
+      const r = await fetch(url);
+      const j = await r.json();
+      if (!j.features || j.features.length === 0) return;
+
+      const [lon, lat] = j.features[0].center;
+      map.flyTo({ center: [lon, lat], zoom: 6 });
+
+      if (window._searchMarker) window._searchMarker.remove();
+      window._searchMarker = new mapboxgl.Marker({ color: "#ffcc00" })
+        .setLngLat([lon, lat])
+        .addTo(map);
+    }
+
+    document.getElementById("searchInput")
+      .addEventListener("keydown", e => {
+        if (e.key === "Enter") {
+          searchPlace(e.target.value.trim());
+        }
+      });
+
     map.on('load', () => {
 
-      /* Köppen Layer */
+      // KOPPEN LAYER
       map.addSource('koppen', { type: 'geojson', data: './koppen.json' });
       map.addLayer({
         id: 'koppen-layer',
         type: 'fill',
         source: 'koppen',
-        paint: { 'fill-color': ['get', 'fill'], 'fill-opacity': 1 }
+        paint: { 'fill-color': ['get', 'fill'], 'fill-opacity': 0.5 }
       });
 
-      /* Label Layers for Opacity */
+      // OPACITY SLIDER (now also controls label layers)
+      const slider = document.getElementById('opacitySlider');
+
+      // gather symbol layers (place names)
       const symbolLayers = map.getStyle().layers
         .filter(l => l.type === 'symbol')
         .map(l => l.id);
 
-      document.getElementById('opacitySlider').addEventListener('input', e => {
+      slider.addEventListener('input', e => {
         const v = parseFloat(e.target.value);
 
-        /* Fade Koppen */
+        // koppen opacity
         map.setPaintProperty('koppen-layer', 'fill-opacity', v);
 
-        /* Fade map labels */
+        // place label opacity (text + icons)
         symbolLayers.forEach(id => {
           if (map.getLayer(id)) {
-            if (map.getPaintProperty(id, 'text-opacity') !== undefined)
-              map.setPaintProperty(id, 'text-opacity', v);
-            if (map.getPaintProperty(id, 'icon-opacity') !== undefined)
-              map.setPaintProperty(id, 'icon-opacity', v);
+            if (map.getPaintProperty(id, "text-opacity") !== undefined)
+              map.setPaintProperty(id, "text-opacity", v);
+            if (map.getPaintProperty(id, "icon-opacity") !== undefined)
+              map.setPaintProperty(id, "icon-opacity", v);
           }
         });
       });
 
-      /* Add LOCAL Geocoder (works on GitHub Pages) */
-      map.addControl(
-        new MapboxGeocoder({
-          accessToken: mapboxgl.accessToken,
-          mapboxgl,
-          marker: true
-        }),
-        'top-left'
-      );
-
-      /* Navigation */
-      map.addControl(new mapboxgl.NavigationControl({ showCompass: false }), 'top-right');
-
-      /* Pins */
+      // PINS
       fetch('pins.json')
         .then(res => res.json())
         .then(points => {
@@ -239,26 +273,34 @@
               const circle = createGeoJSONCircle(coords, pt.radiusKm);
               const id = `circle-${pt.id}`;
               map.addSource(id, { type: 'geojson', data: circle });
-
               map.addLayer({
                 id: `${id}-fill`,
                 type: 'fill',
                 source: id,
-                paint: { 'fill-color': '#ffffff', 'fill-opacity': 0.15 }
+                paint: {
+                  'fill-color': '#ffffff',
+                  'fill-opacity': 0.15
+                }
               });
-
               map.addLayer({
                 id: `${id}-line`,
                 type: 'line',
                 source: id,
-                paint: { 'line-color': '#ffffff', 'line-width': 1 }
+                paint: {
+                  'line-color': '#ffffff',
+                  'line-width': 1
+                }
               });
             }
           });
         });
+
+      map.addControl(
+        new mapboxgl.NavigationControl({ showCompass: false }),
+        'top-right'
+      );
     });
 
-    /* UI toggles */
     document.getElementById('toggleOpacity').addEventListener('click', () => {
       const el = document.getElementById('opacityControls');
       el.style.display = el.style.display === 'block' ? 'none' : 'block';
