--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
       font-family: 'Ubuntu', sans-serif !important;
     }
 
+    .mapboxgl-popup-content a {
+      display: block;
+      text-decoration: none;
+      color: inherit;
+      width: 100%;
+      height: 100%;
+    }
+
     html, body { margin: 0; padding: 0; height: 100%; }
     #map { width: 100%; height: 100%; }
 
@@ -47,7 +55,8 @@
       padding: 6px 0;
     }
 
-    #opacityControls, #legendContainer {
+    #opacityControls,
+    #legendContainer {
       margin-top: 6px;
       display: none;
     }
@@ -78,8 +87,8 @@
     .zone-text.stroke {
       -webkit-text-stroke: 0.35px rgba(0,0,0,0.85);
       text-shadow:
-        0.3px 0 0 rgba(0,0,0,0.85),
-       -0.3px 0 0 rgba(0,0,0,0.85),
+        0.3px 0   0 rgba(0,0,0,0.85),
+       -0.3px 0   0 rgba(0,0,0,0.85),
         0   0.3px 0 rgba(0,0,0,0.85),
         0  -0.3px 0 rgba(0,0,0,0.85),
         0.21px  0.21px 0 rgba(0,0,0,0.85),
@@ -88,7 +97,18 @@
        -0.21px -0.21px 0 rgba(0,0,0,0.85);
     }
 
-    /* added for search box */
+    @media (max-width: 600px) {
+      #controlWrapper {
+        max-width: 200px;
+        padding: 6px 10px;
+      }
+      .toggle-button {
+        font-size: 14px;
+        padding: 4px 0;
+      }
+    }
+
+    /* Search UI */
     #searchBox {
       position: absolute;
       top: 10px;
@@ -97,8 +117,8 @@
       padding: 6px 10px;
       border-radius: 6px;
       box-shadow: 0 0 6px rgba(0,0,0,0.15);
-      z-index: 2000;
-      width: 200px;
+      z-index: 1500;
+      width: 230px;
     }
 
     #searchInput {
@@ -106,23 +126,52 @@
       border: none;
       outline: none;
       font-size: 14px;
-      font-family: Ubuntu, sans-serif;
+      font-family: 'Ubuntu', sans-serif;
     }
 
+    #searchSuggestions {
+      margin-top: 4px;
+      max-height: 200px;
+      overflow-y: auto;
+      border-radius: 4px;
+      box-shadow: 0 0 4px rgba(0,0,0,0.15);
+      background: white;
+      display: none;
+    }
+
+    .suggestion-item {
+      padding: 6px 8px;
+      cursor: pointer;
+      font-size: 13px;
+      border-bottom: 1px solid #eee;
+    }
+
+    .suggestion-item:last-child {
+      border-bottom: none;
+    }
+
+    .suggestion-item:hover {
+      background: #f2f2f2;
+    }
+
+    .suggestion-item.disabled {
+      cursor: default;
+      color: #999;
+    }
   </style>
 </head>
 <body>
   <div id="map"></div>
 
-  <!-- search box -->
   <div id="searchBox">
-    <input id="searchInput" placeholder="Search place…">
+    <input id="searchInput" placeholder="Search place…" autocomplete="off">
+    <div id="searchSuggestions"></div>
   </div>
 
   <div id="controlWrapper">
-    <button id="toggleOpacity" class="toggle-button">Show Climate Zones</button>
+    <button id="toggleOpacity" class="toggle-button">Show Climate & Labels</button>
     <div id="opacityControls">
-      <input type="range" id="opacitySlider" min="0" max="1" step="0.05" value="0.5" />
+      <input type="range" id="opacitySlider" min="0" max="1" step="0.05" value="0.6" />
     </div>
 
     <button id="toggleLegend" class="toggle-button">Show Legend</button>
@@ -132,6 +181,7 @@
   </div>
 
   <script>
+    // --- Colour brightness helpers ---
     function hexToRgb(hex) {
       if (!hex) return null;
       let c = hex.trim();
@@ -165,79 +215,31 @@
     }
 
     mapboxgl.accessToken = 'pk.eyJ1IjoiYXJjaHdydGgiLCJhIjoiY21hZHZpb3Y0MDB3czJxcjZxNjMyNjV5ayJ9.Z5pVSBUcI3HDeALtF6YIiA';
+
     const map = new mapboxgl.Map({
       container: 'map',
-      style: 'mapbox://styles/mapbox/satellite-v9',
+      // satellite + labels, so place names actually exist
+      style: 'mapbox://styles/mapbox/satellite-streets-v12',
       projection: 'globe',
       zoom: 1.5,
-      center: [39.271406, -7.046950]
+      center: [39.271406, -7.046950],
+      pitch: 0,
+      bearing: 0
     });
 
     map.on('style.load', () => map.setFog({}));
 
-    // SEARCH FUNCTION (Mapbox REST API)
-    async function searchPlace(query) {
-      const url = "https://api.mapbox.com/geocoding/v5/mapbox.places/" +
-        encodeURIComponent(query) +
-        ".json?access_token=" + mapboxgl.accessToken;
-
-      const r = await fetch(url);
-      const j = await r.json();
-      if (!j.features || j.features.length === 0) return;
-
-      const [lon, lat] = j.features[0].center;
-      map.flyTo({ center: [lon, lat], zoom: 6 });
-
-      if (window._searchMarker) window._searchMarker.remove();
-      window._searchMarker = new mapboxgl.Marker({ color: "#ffcc00" })
-        .setLngLat([lon, lat])
-        .addTo(map);
-    }
-
-    document.getElementById("searchInput")
-      .addEventListener("keydown", e => {
-        if (e.key === "Enter") {
-          searchPlace(e.target.value.trim());
-        }
-      });
-
     map.on('load', () => {
-
-      // KOPPEN LAYER
+      // --- Köppen polygons ---
       map.addSource('koppen', { type: 'geojson', data: './koppen.json' });
       map.addLayer({
         id: 'koppen-layer',
         type: 'fill',
         source: 'koppen',
-        paint: { 'fill-color': ['get', 'fill'], 'fill-opacity': 0.5 }
+        paint: { 'fill-color': ['get', 'fill'], 'fill-opacity': 0.6 }
       });
 
-      // OPACITY SLIDER (now also controls label layers)
-      const slider = document.getElementById('opacitySlider');
-
-      // gather symbol layers (place names)
-      const symbolLayers = map.getStyle().layers
-        .filter(l => l.type === 'symbol')
-        .map(l => l.id);
-
-      slider.addEventListener('input', e => {
-        const v = parseFloat(e.target.value);
-
-        // koppen opacity
-        map.setPaintProperty('koppen-layer', 'fill-opacity', v);
-
-        // place label opacity (text + icons)
-        symbolLayers.forEach(id => {
-          if (map.getLayer(id)) {
-            if (map.getPaintProperty(id, "text-opacity") !== undefined)
-              map.setPaintProperty(id, "text-opacity", v);
-            if (map.getPaintProperty(id, "icon-opacity") !== undefined)
-              map.setPaintProperty(id, "icon-opacity", v);
-          }
-        });
-      });
-
-      // PINS
+      // --- Pins ---
       fetch('pins.json')
         .then(res => res.json())
         .then(points => {
@@ -251,17 +253,22 @@
                 const cls = bright ? 'zone-text stroke' : 'zone-text';
                 return `<span class="${cls}" style="color:${z.colour};">${z.text}</span>`;
               }).join('<br>');
+            } else if (pt.zoneText && pt.zoneColour) {
+              const bright = brightnessFromHex(pt.zoneColour) >= BRIGHTNESS_THRESHOLD;
+              const cls = bright ? 'zone-text stroke' : 'zone-text';
+              zoneLines = `<span class="${cls}" style="color:${pt.zoneColour};">${pt.zoneText}</span>`;
             }
 
             const popupHtml =
               `<a href="${pt.link}" target="_blank" rel="noopener noreferrer">` +
               `<div style="font-weight:700; line-height:1.3; text-align:center; font-size:17px; margin-bottom:4px;">${pt.title}</div>` +
-              `${pt.address ? pt.address + '<br>' : ''}` +
+              (pt.address ? `${pt.address}<br>` : '') +
               `${zoneLines}<br>` +
               (pt.gdpr ? '<em>Marked area is not exact.</em><br>' : '') +
-              (pt.imageUrl ?
-                `<div style="text-align:center;"><img class="popup-image" src="${pt.imageUrl}" alt="${pt.title}" /></div>` :
-                '') +
+              (pt.imageUrl ? `
+                <div style="text-align:center;">
+                  <img class="popup-image" src="${pt.imageUrl}" alt="${pt.title}" />
+                </div>` : '') +
               `</a>`;
 
             new mapboxgl.Marker({ color: '#FCF5E3' })
@@ -277,39 +284,57 @@
                 id: `${id}-fill`,
                 type: 'fill',
                 source: id,
-                paint: {
-                  'fill-color': '#ffffff',
-                  'fill-opacity': 0.15
-                }
+                paint: { 'fill-color': '#ffffff', 'fill-opacity': 0.15 }
               });
               map.addLayer({
                 id: `${id}-line`,
                 type: 'line',
                 source: id,
-                paint: {
-                  'line-color': '#ffffff',
-                  'line-width': 1
-                }
+                paint: { 'line-color': '#ffffff', 'line-width': 1 }
               });
             }
           });
         });
 
-      map.addControl(
-        new mapboxgl.NavigationControl({ showCompass: false }),
-        'top-right'
-      );
+      // --- Navigation control ---
+      map.addControl(new mapboxgl.NavigationControl({ showCompass: false }), 'top-right');
+
+      // --- Label opacity + Koppen opacity tied to slider ---
+      const slider = document.getElementById('opacitySlider');
+      const symbolLayers = map.getStyle().layers
+        .filter(l => l.type === 'symbol')
+        .map(l => l.id);
+
+      function applyOpacity(value) {
+        const v = parseFloat(value);
+        if (map.getLayer('koppen-layer')) {
+          map.setPaintProperty('koppen-layer', 'fill-opacity', v);
+        }
+        symbolLayers.forEach(id => {
+          if (map.getLayer(id)) {
+            if (map.getPaintProperty(id, 'text-opacity') !== undefined) {
+              map.setPaintProperty(id, 'text-opacity', v);
+            }
+            if (map.getPaintProperty(id, 'icon-opacity') !== undefined) {
+              map.setPaintProperty(id, 'icon-opacity', v);
+            }
+          }
+        });
+      }
+
+      applyOpacity(slider.value);
+      slider.addEventListener('input', e => applyOpacity(e.target.value));
     });
 
-    document.getElementById('toggleOpacity').addEventListener('click', () => {
-      const el = document.getElementById('opacityControls');
-      el.style.display = el.style.display === 'block' ? 'none' : 'block';
-    });
+    // --- Autocomplete search using Mapbox Geocoding REST API ---
+    const searchInput = document.getElementById('searchInput');
+    const suggestionsEl = document.getElementById('searchSuggestions');
+    let searchTimeout = null;
 
-    document.getElementById('toggleLegend').addEventListener('click', () => {
-      const el = document.getElementById('legendContainer');
-      el.style.display = el.style.display === 'block' ? 'none' : 'block';
-    });
-  </script>
-</body>
-</html>
+    function clearSuggestions() {
+      suggestionsEl.innerHTML = '';
+      suggestionsEl.style.display = 'none';
+    }
+
+    function goToFeature(feature) {
+      if (!feature || !feature.center) re
